nubeva-moloches.template.yaml
AWSTemplateFormatVersion: "2010-09-09"
Parameters:
  APIKey:
    Description: "The Token for your Prisms account"
    Type: String
  KeyPairName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Name of an existing EC2 KeyPair to enable SSH access to the ECS instances.
  VPCID:
    Type: AWS::EC2::VPC::Id
    Description: Select the VPC to install into.
  RemoteAccessCIDR:
    Type: String
    Description: The CIDR notation of address to access this tool
  PrivateSubnet1ID:
    Description: Subnet Id for Private Subnet1
    Type: AWS::EC2::Subnet::Id
  PrivateSubnet2ID:
    Description: Subnet Id for Private Subnet2
    Type: AWS::EC2::Subnet::Id
  NumberOfNodes:
    Description: 'The number of EC2 instances'
    Type: Number
    Default: 2
  MaximumNodes:
    Type: Number
    Default: '6'
    Description: Maximum number of instances that can be launched in your tool cluster.
  NodeInstanceType:
    Description: EC2 instance type
    Type: String
    Default: t3.xlarge
    AllowedValues: [m5.xlarge, m5.2xlarge,
      m5.4xlarge, m5.12xlarge, m5.24xlarge, c5.xlarge, c5.2xlarge, c5.4xlarge,
      c5.8xlarge, r5.xlarge, r5.2xlarge, r5.4xlarge, r5.12xlarge,
      r5.24xlarge, i3.xlarge, i3.2xlarge, i3.4xlarge, i3.8xlarge, i3.16xlarge]
    ConstraintDescription: Please choose a valid instance type.
  #DomainName:
  #  Description: User defined Elasticsearch Domain name
  #  Type: String
  #ElasticsearchVersion:
  #  Description: User defined Elasticsearch Version
  #  Type: String

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: "Network Configuration"
        Parameters:
          - VPCID
          - PrivateSubnet1CIDR
          - PrivateSubnet2CIDR
          - VPCCIDR
          - RemoteAccessCIDR
      - Label:
          default: "Autoscaling Configuration"
        Parameters:
          - KeyPairName
          - NodeInstanceType
          - NumberOfNodes
          - MaximumNodes
      #- Label:
          #default: "ES Service Configuration"
        #Parameters:
          #- DomainName
          #- ElasticsearchVersion

Mappings:
  AWSAMIRegionMap:
    AMI:
      awslinux2: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2
    ap-northeast-1:
      awslinux2: "ami-0c3fd0f5d33134a76"
    ap-northeast-2:
      awslinux2: "ami-095ca789e0549777d"
    ap-south-1:
      awslinux2: "ami-0d2692b6acea72ee6"
    ap-southeast-1:
      awslinux2: "ami-01f7527546b557442"
    ap-southeast-2:
      awslinux2: "ami-0dc96254d5535925f"
    eu-central-1:
      awslinux2: "ami-0cc293023f983ed53"
    eu-north-1:
      awslinux2: "ami-3f36be41"
    eu-west-1:
      awslinux2: "ami-0bbc25e23a7640b9b"
    eu-west-2:
      awslinux2: "ami-0d8e27447ec2c8410"
    eu-west-3:
      awslinux2: "ami-0adcddd3324248c4c"
    us-east-1:
      awslinux2: "ami-0b898040803850657"
    us-east-2:
      awslinux2: "ami-0d8f6eb4f641ef691"
    us-west-1:
      awslinux2: "ami-056ee704806822732"
    us-west-2:
      awslinux2: "ami-082b5a644766e0e6f"
    ca-central-1:
      awslinux2: "ami-0d4ae09ec9361d8ac"
    sa-east-1:
      awslinux2: "ami-058943e7d9b9cabfb"

Resources:
  # The Security Group placed on the AWS Elasticsearch Service
  ESSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ElasticSearch Service Security Group
      VpcId: !Ref 'VPCID'
      SecurityGroupIngress:
        - FromPort: '443'
          IpProtocol: tcp
          ToPort: '443'
          CidrIp:
            - Ref! "PrivateSubnet1CIDR"
            - Ref! "PrivateSubnet2CIDR"
  # The Security Group placed on the tools themselves
  ToolSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Tool Security Group
      VpcId: !Ref 'VPCID'
  # Inbound- allow ssh
  SecurityGroupSSHinbound:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref "ToolSecurityGroup"
      IpProtocol: tcp
      FromPort: '22'
      ToPort: '22'
      CidrIp: !Ref "RemoteAccessCIDR"
  # Inbound- allow VXLAN
  ToolSecurityGroupVXLANinbound:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref "ToolSecurityGroup"
      CidrIp: !Ref "RemoteAccessCIDR"
      IpProtocol: udp
      FromPort: '4789'
      ToPort: '4789'
  # Inbound- allow moloch viewer
  ToolSecurityGroupntopinbound:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref "ToolSecurityGroup"
      IpProtocol: tcp
      FromPort: '8005'
      ToPort: '8005'
      CidrIp: !Ref "RemoteAccessCIDR"
  # Outbound- allow all
  ToolSecurityGroupOutbound:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref "ToolSecurityGroup"
      CidrIp: 0.0.0.0/0
      IpProtocol: "-1"
      FromPort: '-1'
      ToPort: '-1'

  InstanceProfile:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      Path: '/'
      Roles:
      - !Ref IAMRole

  IAMRole:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - 'ec2.amazonaws.com'
          Action:
          - 'sts:AssumeRole'
      Path: '/'
      Policies:
      - PolicyName: asg
        PolicyDocument:
          Version: '2012-10-17'
          Statement:
          - Effect: Allow
            Action:
            - 'autoscaling:DescribeAutoScalingGroups'
            - 'autoscaling:DescribeAutoScalingInstances'
            - 'ec2:DescribeInstances'
            Resource:
            - '*'

  MolochElasticsearchDomain:
    Type: AWS::Elasticsearch::Domain
    Properties:
      #DomainName: !Ref DomainName
      DomainName: !Sub ${AWS::StackName}
      #ElasticsearchVersion: !Ref ElasticsearchVersion
      ElasticsearchVersion: '6.8'
      ElasticsearchClusterConfig:
        InstanceCount: !Ref NumberOfNodes
        InstanceType: !Ref InstanceType
      EBSOptions:
        EBSEnabled: 'true'
        Iops: 0
        VolumeSize: 100
        VolumeType: standard
      SnapshotOptions:
        AutomatedSnapshotStartHour: '0'
      AccessPolicies:
        Version: 2012-10-17
        Statement:
          - Effect: Deny
            Principal:
              AWS: '*'
            Action: 'es:*'
            Resource: '*'
      AdvancedOptions:
        rest.action.multi.allow_explicit_index: 'true'
      VPCOptions:
        SubnetIds:
          - !Ref PrivateSubnet1ID
          - !Ref PrivateSubnet2ID
        SecurityGroupIds:
          - !Ref ESSecurityGroup

  AutoScalingGroup:
    DependsOn: MolochElasticsearchDomain
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      VPCZoneIdentifier:
      - !Ref PrivateSubnet1ID
      - !Ref PrivateSubnet2ID
      LaunchConfigurationName: !Ref LaunchConfiguration
      MinSize: 0
      MaxSize: !Ref 'MaximumNodes'
      DesiredCapacity: !Ref 'NumberOfNodes'
      MetricsCollection:
      - Granularity: 1Minute
        Metrics:
        - GroupInServiceInstances
      Tags:
      - Key: Name
        Value: !Sub ${AWS::StackName}
        PropagateAtLaunch: 'true'
    CreationPolicy:
      ResourceSignal:
        Count: 1
        Timeout: PT10M
    UpdatePolicy:
      AutoScalingRollingUpdate:
        MinInstancesInService: !Ref NumberOfNodes
        MaxBatchSize: '1'
        PauseTime: PT5M
        SuspendProcesses:
        - AlarmNotification
        WaitOnResourceSignals: 'true'

  LaunchConfiguration:
    Type: AWS::AutoScaling::LaunchConfiguration
    Metadata:
      AWS::CloudFormation::Init:
        configSets:
          Configure:
            - "configStartup"
          Install:
            #- "installElasticsearch"
            - "installServices"
            - "installNurxAgent"
            - "installMoloch"
          Start:
            - "startMoloch"

        configStartup:
          commands:
            01_chmod:
              command: "chmod +x /etc/rc.d/rc.local"
        #installElasticsearch:
          #commands:
            #01_setES_pubkeys:
              #command: "rpm --import https://artifacts.elastic.co/GPG-KEY-elasticsearch"
            #02_get_repo_info:
              #command: "wget -nv https://raw.githubusercontent.com/nubevalabs/templates/master/elastic.repo -O /etc/yum.repos.d/elastic.repo"
        installServices:
          packages:
            yum:
              perl-JSON: []
              perl-libwww-perl: []
              libyaml-devel: []
              java-1.8.0-openjdk: []
              wget: []
              perl-LWP-Protocol-https: []
              perl-Crypt-SSLeay: []
              docker: []
          services:
            sysvinit:
              #elasticsearch:
                #enabled: true
                #ensureRunning: true
              docker:
                enabled: true
                ensureRunning: true
        installNurxAgent:
          commands:
            01_download_and_install:
              command:
                !Sub |
                  docker run -v /:/host -v /var/run/docker.sock:/var/run/docker.sock --cap-add NET_ADMIN --name nubeva-rx -d --restart=on-failure --net=host nubeva/nurx --accept-eula --nutoken ${APIKey}
        installMoloch:
          commands:
            01_wget:
              command: "wget -nv https://files.molo.ch/moloch-master.centos7.x86_64.rpm -O /tmp/moloch-master.centos7.x86_64.rpm"
            02_install:
              command: "rpm -Uvh /tmp/moloch-master.centos7.x86_64.rpm"
            03_installconfig:
              command: "wget -nv https://raw.githubusercontent.com/nubevalabs/templates/master/mastermolochconfig.ini -O /data/moloch/etc/config.ini"
            04_installStartScript:
              command: "wget -nv https://raw.githubusercontent.com/nubevalabs/templates/master/start_moloch.sh -O /data/moloch/start_moloch.sh"
            05_allowExecute:
              command: "chmod +x /data/moloch/start_moloch.sh"
            06_forceSleep:
              command: "sleep 60"
            07_setupNewDB:
              #command: "/data/moloch/db/db.pl http://localhost:9200 init"
              command: "/data/moloch/db/db.pl \"$MAGIC\" init"
              command: "echo \"$MAGIC\" >> /data/moloch/etc/config.ini"
              env:
                MAGIC: !Ref MolochElasticsearchDomain
              #command: "/data/moloch/db/db.pl http://localhost:9200 init"
            08_createAdmin:
              command: "/data/moloch/bin/moloch_add_user.sh admin \"admin user\" G0Nub3va20[] --admin"
            09_setupMolochGeoIP:
              command: "/data/moloch/bin/moloch_update_geo.sh"
            10_setupMolochLogs:
              command: "mkdir /data/moloch/logs"
            11_setupMolochLogs:
              command: "mkdir /data/moloch/raw"
            12_cleanup:
              command: "rm /tmp/moloch-master.centos7.x86_64.rpm"
        startMoloch:
          commands:
            01_addsleeprclocal:
              command: "echo 'sleep 60' >> /etc/rc.local"
            02_addMolochrclocal:
              command: "echo '/data/moloch/start_moloch.sh' >> /etc/rc.local"
            03_startMoloch:
              command: "/data/moloch/start_moloch.sh"


    Properties:
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -xe
          yum install -y https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
          yum update -y
          yum update -y aws-cfn-bootstrap
          # how do I get correct region variable
          /opt/aws/bin/cfn-init -v --region ${AWS::Region} --stack ${AWS::StackName} --resource LaunchConfiguration --configsets Configure,Install,Start
          # don't know how to get a signal # has something to do with minnimums on autoscale-0 works, 1 doesn't
          /opt/aws/bin/cfn-signal -e $? --region ${AWS::Region} --stack ${AWS::StackName} --resource AutoScalingGroup
      InstanceType: !Ref NodeInstanceType
      ImageId: !FindInMap
        - AWSAMIRegionMap
        - !Ref 'AWS::Region'
        - awslinux2
      SecurityGroups:
      - !Ref "ToolSecurityGroup"
      IamInstanceProfile: !Ref InstanceProfile
      KeyName:
        Ref: KeyPairName
      BlockDeviceMappings:
      - DeviceName: "/dev/xvda"
        Ebs:
          VolumeSize: "100"


Outputs:
#  URL:
#    Description: "The URL of this instance's Moloch Dashboard"
#    Value: !Sub "http://${MyServerInstance.PublicIp}:8005"
  DomainArn:
    Value: !GetAtt MolochElasticsearchDomain.DomainArn
  DomainEndpoint:
    Value: !GetAtt MolochElasticsearchDomain.DomainEndpoint
